# P

./: .gitignore  .pre-commit-config.yaml  README.md  admin.py  apps.py  forms.py  models.py  oauth.py  pyproject.toml  serviceclient.py  urls.py  utils.py  views.py
css/: P.css  messages.css
doc/: graph.mermaid
js/: messages.js  my_services_overview.js  service_page.js  services_overview.js  webrtc.js
management/commands/: P_init.py
templates/P/: admin_pick_socialapp.html  awaiting_consent.html  consent_sent.html  consent_start.html  consent_success.html  enduser_page.html  error.html  landing_page.html  my_services_overview.html  service_page.html  services_overview.html
